# Anomaly-Detector

./: .gitignore  CLI.cpp  CLI.h  CMakeLists.txt  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  MainTrain.cpp  README.md  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  anomaly_detection_util  anomaly_detection_util.cpp  anomaly_detection_util.h  commands.h  main  minCircle.cpp  minCircle.h  testFile.csv  timeseries.cpp  timeseries.h  trainFile.csv
